<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragment.UserCardDetailFragment"
                                                   android:id="@+id/constraintLayoutDetail"
                                                   android:background="@color/ic_launcher_background">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvArtist"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            tools:text="@string/cardArtist"
            android:text="@string/cardArtist" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRarity"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/userCardArtist"
            tools:text="Artist"
            app:layout_constraintTop_toTopOf="@+id/tvArtist"
            app:layout_constraintStart_toStartOf="@+id/userCardDetailPokedexNumber"/>


    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/userDetailWithPokedexNumber"
                                            android:visibility="visible"
                                            app:constraint_referenced_ids="tvPokedexNumber,userCardDetailPokedexNumber"/>

    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/userDetailWithArtist"
                                            android:visibility="visible"
                                            app:constraint_referenced_ids="userCardArtist,tvArtist"/>

    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/userDetailWithRarity"
                                            android:visibility="visible"
                                            app:constraint_referenced_ids="userCardRarity,tvRarity"/>


    <ImageView
            android:src="@drawable/dust_image"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutCard"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:id="@+id/userDust"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" android:gravity="center"
            app:layout_constraintVertical_bias="1.0"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/constraintLayoutCard"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="8dp">

        <ImageView
                android:src="@drawable/pokemon_card_back"
                android:layout_width="100dp"
                android:layout_height="135dp" android:id="@+id/userCardDetailImageViewCard"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <ImageView
                android:src="@drawable/dust_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:id="@+id/imageView3"
                app:layout_constraintBottom_toBottomOf="@+id/userCardDetailDust"
                app:layout_constraintTop_toTopOf="@+id/userCardDetailDust"
                app:layout_constraintStart_toStartOf="@+id/userCardDetailImageViewCard"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="Dust"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/userCardDetailDust"
                app:layout_constraintTop_toBottomOf="@+id/userCardDetailImageViewCard"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginStart="8dp" android:gravity="center"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/userCardDetailImageViewCard"/>
        <Button
                android:text="@string/destroy"
                android:layout_width="wrap_content"
                android:layout_height="36dp" android:id="@+id/userCardDetailButtonDust"
                app:layout_constraintTop_toBottomOf="@+id/userCardDetailDust"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/userCardDetailImageViewCard"
                app:layout_constraintEnd_toEndOf="@+id/userCardDetailImageViewCard"
                android:backgroundTintMode="screen"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
            android:text="Pokemon Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/userCardDetailPokemonName"
            app:layout_constraintTop_toTopOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/userCardDetailPokedexNumber"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/userCardDetailPokedexNumber"
            app:layout_constraintStart_toEndOf="@+id/tvName" android:layout_marginStart="76dp"
            app:layout_constraintTop_toTopOf="@+id/tvPokedexNumber"
            android:text="pokedex number"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/userCardRarity"
            tools:text="Card Rarity"
            app:layout_constraintTop_toTopOf="@+id/tvRarity"
            app:layout_constraintStart_toStartOf="@+id/userCardDetailPokedexNumber"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/tvName" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCard"
            tools:text="@string/pokemonName" android:text="@string/pokemonName"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPokedexNumber"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvName" tools:text="@string/pokedexNumber"
            android:text="@string/pokedexNumber"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRarity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPokedexNumber" tools:text="@string/cardRarity"
            android:text="@string/cardRarity"/>

</androidx.constraintlayout.widget.ConstraintLayout>